--- a/Svg.html
+++ b/Svg.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1 class="center">Snowy Cabin</h1>
-    <p>A log cabin surrounded by snow. Mostly inspired by the lack of snow in California.</p>
+    <p>A log cabin surrounded by snow with a freshly made snowman nearby. Mostly inspired by the lack of snow in California.</p>
     <svg width="100%"  height="100%" style="background-color: #08f">
       <rect x="0" y="0" width="3000" height="1000" fill="#08f">
       <animate attributeName="fill" from="#08f" to="#black" dur="3s"fill="freeze" begin="moonRising.begin"/>
