One Snowflake update
added one snowflake

--- a/Svg.html
+++ b/Svg.html
@@ -57,6 +57,9 @@
 <circle cx="80" cy="3" r="10" fill="white" opacity="0.75">
     <animate attributeName="cy" from="20" to="650" dur="3s"repeatCount="indefinite"/>
   </circle>
+  <circle cx="200" cy="3" r="10" fill="white" opacity="0.75">
+      <animate attributeName="cy" from="20" to="650" dur="2.2s"repeatCount="indefinite"/>
+    </circle>
   <circle cx="400" cy="3" r="10" fill="white"opacity="0.75">
       <animate attributeName="cy" from="0" to="650" dur="3s"repeatCount="indefinite"/>
     </circle>
